--- a/TOneV2/Code/TOneV2/TOne.LCRProcess/UpdateZoneRateProcess.xaml
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess/UpdateZoneRateProcess.xaml
@@ -1,6 +1,5 @@
-﻿<Activity mc:Ignorable="sap sap2010 sads" x:Class="TOne.LCRProcess.UpdateZoneRateProcess" sap2010:ExpressionActivityEditor.ExpressionActivityEditor="C#" sap2010:WorkflowViewState.IdRef="TOne.LCRProcess.UpdateZoneRateProcess_1"
+﻿<Activity mc:Ignorable="sap sap2010 sads" x:Class="TOne.LCRProcess.UpdateZoneRateProcess"
  xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities"
- xmlns:local="clr-namespace:TOne.LCRProcess"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:mca="clr-namespace:Microsoft.CSharp.Activities;assembly=System.Activities"
  xmlns:s="clr-namespace:System;assembly=mscorlib"
@@ -9,9 +8,14 @@
  xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation"
  xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib"
  xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib"
- xmlns:tla="clr-namespace:TOne.LCRProcess.Activities;assembly=TOne.LCRProcess.Activities"
- xmlns:vbw="clr-namespace:Vanrise.BusinessProcess.WFActivities;assembly=Vanrise.BusinessProcess.WFActivities"
+ xmlns:tla="clr-namespace:TOne.LCRProcess.Arguments;assembly=TOne.LCRProcess.Arguments"
+ xmlns:tla1="clr-namespace:TOne.LCRProcess.Activities;assembly=TOne.LCRProcess.Activities"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+  <x:Members>
+    <x:Property Name="Input" Type="InArgument(tla:UpdateZoneRateProcessInput)" />
+  </x:Members>
+  <sap2010:ExpressionActivityEditor.ExpressionActivityEditor>C#</sap2010:ExpressionActivityEditor.ExpressionActivityEditor>
+  <sap2010:WorkflowViewState.IdRef>TOne.LCRProcess.UpdateZoneRateProcess_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities.XamlIntegration</x:String>
@@ -33,6 +37,7 @@
       <x:String>Vanrise.Common</x:String>
       <x:String>System.Windows.Markup</x:String>
       <x:String>TOne.LCRProcess</x:String>
+      <x:String>TOne.LCRProcess.Arguments</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -58,6 +63,7 @@
       <AssemblyReference>TABS</AssemblyReference>
       <AssemblyReference>TOne.Caching</AssemblyReference>
       <AssemblyReference>TOne.Entities</AssemblyReference>
+      <AssemblyReference>TOne.LCR.Entities</AssemblyReference>
       <AssemblyReference>TOne.LCRProcess.Activities</AssemblyReference>
       <AssemblyReference>TOne.LCRProcess.Arguments</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -66,8 +72,6 @@
   </TextExpression.ReferencesForImplementation>
   <Sequence sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
-      <Variable x:TypeArguments="local:ZoneRateProcessLastRunInfo" Name="lastRunInfo" />
-      <Variable x:TypeArguments="s:Byte[]" Name="newRateLastTimestamp" />
       <Variable x:TypeArguments="s:DateTime" Name="start">
         <Variable.Default>
           <mca:CSharpValue x:TypeArguments="s:DateTime">DateTime.Now</mca:CSharpValue>
@@ -79,80 +83,46 @@
         <mca:CSharpValue x:TypeArguments="x:String">String.Format("{0}: ZoneRate Process Started", DateTime.Now)</mca:CSharpValue>
       </InArgument>
     </WriteLine>
-    <vbw:GetDefinitionObjectState x:TypeArguments="local:ZoneRateProcessLastRunInfo" ObjectKey="{x:Null}" sap2010:WorkflowViewState.IdRef="GetDefinitionObjectState`1_1">
-      <vbw:GetDefinitionObjectState.Result>
-        <OutArgument x:TypeArguments="local:ZoneRateProcessLastRunInfo">
-          <mca:CSharpReference x:TypeArguments="local:ZoneRateProcessLastRunInfo">lastRunInfo</mca:CSharpReference>
-        </OutArgument>
-      </vbw:GetDefinitionObjectState.Result>
-    </vbw:GetDefinitionObjectState>
-    <tla:GetRateLastTimestamp sap2010:WorkflowViewState.IdRef="GetRateLastTimestamp_1">
-      <tla:GetRateLastTimestamp.LastTimestamp>
-        <OutArgument x:TypeArguments="s:Byte[]">
-          <mca:CSharpReference x:TypeArguments="s:Byte[]">newRateLastTimestamp</mca:CSharpReference>
-        </OutArgument>
-      </tla:GetRateLastTimestamp.LastTimestamp>
-    </tla:GetRateLastTimestamp>
-    <tla:UpdateZoneRateFromNewRates sap2010:WorkflowViewState.IdRef="UpdateZoneRateFromNewRates_1">
-      <tla:UpdateZoneRateFromNewRates.RatesUpdatedAfter>
-        <InArgument x:TypeArguments="s:Byte[]">
-          <mca:CSharpValue x:TypeArguments="s:Byte[]">lastRunInfo.RateLastTimestamp</mca:CSharpValue>
+    <tla1:CreateAndFillZoneRateTable Status="{x:Null}" sap2010:WorkflowViewState.IdRef="CreateAndFillZoneRateTable_1">
+      <tla1:CreateAndFillZoneRateTable.EffectiveOn>
+        <InArgument x:TypeArguments="s:DateTime">
+          <mca:CSharpValue x:TypeArguments="s:DateTime">Input.RateEffectiveOn</mca:CSharpValue>
         </InArgument>
-      </tla:UpdateZoneRateFromNewRates.RatesUpdatedAfter>
-    </tla:UpdateZoneRateFromNewRates>
-    <tla:UpdateZoneRateFromChangedRates sap2010:WorkflowViewState.IdRef="UpdateZoneRateFromChangedRates_1">
-      <tla:UpdateZoneRateFromChangedRates.RatesUpdatedAfter>
-        <InArgument x:TypeArguments="s:Byte[]">
-          <mca:CSharpValue x:TypeArguments="s:Byte[]">lastRunInfo.RateLastTimestamp</mca:CSharpValue>
+      </tla1:CreateAndFillZoneRateTable.EffectiveOn>
+      <tla1:CreateAndFillZoneRateTable.IsFuture>
+        <InArgument x:TypeArguments="x:Boolean">
+          <mca:CSharpValue x:TypeArguments="x:Boolean">Input.IsFuture</mca:CSharpValue>
         </InArgument>
-      </tla:UpdateZoneRateFromChangedRates.RatesUpdatedAfter>
-    </tla:UpdateZoneRateFromChangedRates>
-    <tla:ApplyEffectiveRatesToZoneRate sap2010:WorkflowViewState.IdRef="ApplyEffectiveRatesToZoneRate_1" />
-    <Assign sap2010:WorkflowViewState.IdRef="Assign_2">
-      <Assign.To>
-        <OutArgument x:TypeArguments="s:Byte[]">
-          <mca:CSharpReference x:TypeArguments="s:Byte[]">lastRunInfo.RateLastTimestamp</mca:CSharpReference>
-        </OutArgument>
-      </Assign.To>
-      <Assign.Value>
-        <InArgument x:TypeArguments="s:Byte[]">
-          <mca:CSharpValue x:TypeArguments="s:Byte[]">newRateLastTimestamp</mca:CSharpValue>
+      </tla1:CreateAndFillZoneRateTable.IsFuture>
+    </tla1:CreateAndFillZoneRateTable>
+    <tla1:SwapZoneRateTableWithTemp sap2010:WorkflowViewState.IdRef="SwapZoneRateTableWithTemp_1">
+      <tla1:SwapZoneRateTableWithTemp.IsFuture>
+        <InArgument x:TypeArguments="x:Boolean">
+          <mca:CSharpValue x:TypeArguments="x:Boolean">Input.IsFuture</mca:CSharpValue>
         </InArgument>
-      </Assign.Value>
-    </Assign>
-    <vbw:SaveDefinitionObjectState ObjectKey="{x:Null}" sap2010:WorkflowViewState.IdRef="SaveDefinitionObjectState_1">
-      <vbw:SaveDefinitionObjectState.ObjectValue>
-        <InArgument x:TypeArguments="x:Object">
-          <mca:CSharpValue x:TypeArguments="x:Object">lastRunInfo</mca:CSharpValue>
-        </InArgument>
-      </vbw:SaveDefinitionObjectState.ObjectValue>
-    </vbw:SaveDefinitionObjectState>
+      </tla1:SwapZoneRateTableWithTemp.IsFuture>
+    </tla1:SwapZoneRateTableWithTemp>
     <WriteLine sap2010:WorkflowViewState.IdRef="WriteLine_2">
       <InArgument x:TypeArguments="x:String">
         <mca:CSharpValue x:TypeArguments="x:String">String.Format("{0}: Process done in {1}", DateTime.Now, (DateTime.Now - start))</mca:CSharpValue>
       </InArgument>
     </WriteLine>
-    <sads:DebugSymbol.Symbol>d0RDOlxURlNcVE9uZVYyXENvZGVcVE9uZVYyXFRPbmUuTENSUHJvY2Vzc1xVcGRhdGVab25lUmF0ZVByb2Nlc3MueGFtbBRDA4gBDgIBAUkLSVcCAQJNBVERAgEuUgVYJAIBKVkFXyACASRgBWYmAgEfZwVtKgIBGm4FbmwCARlvBXoOAgEQewWBASUCAQuCAQWGARECAQZPCU+DAQIBL1ULVXQCASpcC1xlAgElYwtjZgIBIGoLamYCARt3C3ddAgEVcgtybgIBEX4LflQCAQyEAQmEAZYBAgEH</sads:DebugSymbol.Symbol>
+    <sads:DebugSymbol.Symbol>d0RDOlxURlNcVE9uZVYyXENvZGVcVE9uZVYyXFRPbmUuTENSUHJvY2Vzc1xVcGRhdGVab25lUmF0ZVByb2Nlc3MueGFtbAtJA28OAgEBTQtNVwIBAlEFVRECARRWBWEnAgENYgVoJgIBCWkFbRECAQVTCVODAQIBFVkLWWACARFeC15YAgEOZQtlWAIBCmsJa5YBAgEG</sads:DebugSymbol.Symbol>
   </Sequence>
   <sap2010:WorkflowViewState.ViewStateManager>
     <sap2010:ViewStateManager>
-      <sap2010:ViewStateData Id="WriteLine_1" sap:VirtualizedContainerService.HintSize="242,62" />
-      <sap2010:ViewStateData Id="GetDefinitionObjectState`1_1" sap:VirtualizedContainerService.HintSize="242,22" />
-      <sap2010:ViewStateData Id="GetRateLastTimestamp_1" sap:VirtualizedContainerService.HintSize="242,22" />
-      <sap2010:ViewStateData Id="UpdateZoneRateFromNewRates_1" sap:VirtualizedContainerService.HintSize="242,22" />
-      <sap2010:ViewStateData Id="UpdateZoneRateFromChangedRates_1" sap:VirtualizedContainerService.HintSize="242,22" />
-      <sap2010:ViewStateData Id="ApplyEffectiveRatesToZoneRate_1" sap:VirtualizedContainerService.HintSize="242,22" />
-      <sap2010:ViewStateData Id="Assign_2" sap:VirtualizedContainerService.HintSize="242,62" />
-      <sap2010:ViewStateData Id="SaveDefinitionObjectState_1" sap:VirtualizedContainerService.HintSize="242,22" />
-      <sap2010:ViewStateData Id="WriteLine_2" sap:VirtualizedContainerService.HintSize="242,62" />
-      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="264,762">
+      <sap2010:ViewStateData Id="WriteLine_1" sap:VirtualizedContainerService.HintSize="211,62" />
+      <sap2010:ViewStateData Id="CreateAndFillZoneRateTable_1" sap:VirtualizedContainerService.HintSize="211,22" />
+      <sap2010:ViewStateData Id="SwapZoneRateTableWithTemp_1" sap:VirtualizedContainerService.HintSize="211,22" />
+      <sap2010:ViewStateData Id="WriteLine_2" sap:VirtualizedContainerService.HintSize="211,62" />
+      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="233,412">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
-      <sap2010:ViewStateData Id="TOne.LCRProcess.UpdateZoneRateProcess_1" sap:VirtualizedContainerService.HintSize="304,842" />
+      <sap2010:ViewStateData Id="TOne.LCRProcess.UpdateZoneRateProcess_1" sap:VirtualizedContainerService.HintSize="273,492" />
     </sap2010:ViewStateManager>
   </sap2010:WorkflowViewState.ViewStateManager>
 </Activity>
