git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20605

--- a/CLITester/CLITesterSite/Site.master
+++ b/CLITester/CLITesterSite/Site.master
@@ -61,7 +61,7 @@
     <!-- BEGIN FOOTER -->
 	<div class="footer">
 		<div class="footer-inner">
-			2014 &copy; CLI Tester by Hadi - Vanrise Solutions .
+			2015 &copy; CLI Tester - Vanrise Solutions.
 		</div>
 		<div class="footer-tools">
 			<span class="go-top">
