git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20784

--- a/FZero/Vanrise.Fzero.CDRAnalysis.Website/MasterPage.master
+++ b/FZero/Vanrise.Fzero.CDRAnalysis.Website/MasterPage.master
@@ -81,7 +81,7 @@
                     <!-- BEGIN LOGO -->
                     <a class="brand">
                         <%--<img alt="Metro Lab" src="img/logo.png">--%>
-                        <h2>(PSTN) CDR Analysis </h2>
+                        <h2>PSTN CDR Analysis </h2>
                     </a>
                     <!-- END LOGO -->
                     <!-- BEGIN RESPONSIVE MENU TOGGLER -->
