git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20887

--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/MasterPage.master
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/MasterPage.master
@@ -162,7 +162,7 @@
                         <li class="sub-menu" id="btnSwitches" runat="server">
                             <a class="" href="SwitchProfiles.aspx">
                                 <i class="icon-fullscreen"></i>
-                                <span>Switches</span>
+                                <span>Sources</span>
                             </a>
                         </li>
                       
