--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Content/Site.css
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Content/Site.css
@@ -40,3 +40,157 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+.grid {
+    width: 95%;
+    height: 400px;
+}
+
+.header-fixed {
+    width: 100%;
+}
+
+    .header-fixed > thead,
+    .header-fixed > tbody,
+    .header-fixed > thead > tr,
+    .header-fixed > tbody > tr,
+    .header-fixed > thead > tr > th,
+    .header-fixed > tbody > tr > td {
+        display: block;
+    }
+
+        .header-fixed > tbody > tr:after,
+        .header-fixed > thead > tr:after {
+            content: ' ';
+            display: block;
+            visibility: hidden;
+            clear: both;
+        }
+
+    .header-fixed > tbody {
+        overflow-y: auto;
+        overflow-x: hidden;
+        height: 300px;
+    }
+
+        .header-fixed > tbody > tr > td,
+        .header-fixed > thead > tr > th {
+            width: 25%;
+            float: left;
+        }
+
+.odd {
+    background-color: #f9f9f9;
+}
+
+.hand {
+    cursor: pointer !important;
+    cursor: hand !important;
+}
+
+.no-padding {
+    padding: 0px;
+}
+
+.pad-top {
+    padding-top: 23px;
+}
+
+.padding-md {
+    padding: 10px;
+}
+
+.relative-con {
+    position: relative;
+    top: 40px;
+    right: 75px;
+}
+
+.fieldset-custom {
+    border: 1px groove #ddd !important;
+    padding: 0 1.4em 1.4em 1.4em !important;
+    margin: 0 0 1.5em 0 !important;
+    -webkit-box-shadow: 0px 0px 0px 0px #000;
+    box-shadow: 0px 0px 0px 0px #000;
+    text-align: center;
+}
+
+.fieldset-custom legend {
+    font-size: 1.2em !important;
+    font-weight: bold !important;
+    text-align: left !important;
+    width: auto;
+    padding: 0 10px;
+    border-bottom: none;
+}
+.action-bar{
+    text-align: right;
+    background-color: #4C5359;
+}
+.panel-over-color{
+    border-color: #4C5359;
+}
+.btncustom:hover{
+ 
+    opacity:0.99;
+    background-color:black !important;
+
+}
+.ui-grid {
+    border:none;
+}
+.ui-grid-cell-contents {
+    /*padding: 15px 5px;*/
+    box-sizing: border-box;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    height: 100%;
+}
+.ui-grid-header-canvas{
+     background-color:#829EBF;
+}
+.ui-grid-header-cell {
+  background-color:#829EBF;
+  color:#fff;
+  border:none;
+}
+.ui-grid-cell {
+    border:none;
+}
+.ui-grid-row:nth-child(even) .ui-grid-cell {
+  background-color: #E0E1E1;
+}
+.loader {
+  background-image: url('loaderNEW.gif');
+  background-repeat: no-repeat;
+  height:64px;
+}
+/*.tab{
+    padding:20px;
+}
+.tabcontent{
+    
+    border:1px solid #0f0f0f;
+    margin:0px;
+}
+.tab-head  {
+    border :1px solid #FAFAFA;
+    margin:0px !important;
+}
+.tab-body {
+    border :1px solid #FAFAFA;
+    margin:0px !important;
+}
+.tab-head div{
+    padding: 21px 25px 22px;
+    border-top: 1px solid #FAFAFA;
+    border-bottom: 1px solid #E0E0E0;    
+    background: -moz-linear-gradient(center top , #EDEDED, #EBEBEB) repeat scroll 0% 0% transparent;
+}
+.tab-body div{
+    padding: 21px 25px 22px;
+    border-top: 1px solid #FAFAFA;
+    border-bottom: 1px solid #E0E0E0;
+    background: -moz-linear-gradient(center top , #fff, #fff) repeat scroll 0% 0% transparent;
+}*/
