--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Content/Site.css
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Content/Site.css
@@ -124,8 +124,19 @@ input[type="checkbox"].input-validation-error {
     border-bottom: none;
 }
 .action-bar{
-    text-align: right;
     background-color: #4C5359;
+}
+.action-bar-left{   
+    width:49%;
+}
+.action-bar-left button{
+    float:left;
+}
+.action-bar-right{
+    width:49%;
+}
+.action-bar-right button{
+    float:right !important ;
 }
 .panel-over-color{
     border-color: #4C5359;
@@ -161,10 +172,39 @@ input[type="checkbox"].input-validation-error {
 .ui-grid-row:nth-child(even) .ui-grid-cell {
   background-color: #E0E1E1;
 }
-.loader {
-  background-image: url('loaderNEW.gif');
-  background-repeat: no-repeat;
-  height:64px;
+.outer-loader{
+	background: #0C0C0C;
+	position: absolute;
+    height:100%;
+	top: 0px;
+	left: 0px;
+	opacity: 0.1;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=10)"; 
+	filter: alpha(opacity=10);
+	width: 100%;
+	z-index: 20000;
+}
+.loader {  
+    text-align:center;
+    position: absolute;
+    left: 50%;
+    z-index: 100;
+    top: 100px;
+}
+.max-width-md {
+    width: 200px !important;
+    max-width:200px !important;
+}
+.max-width-sm {
+    width: 99px !important;
+    max-width:99px !important;
+}
+.multiSelect > button{
+    width: 200px !important;
+    max-width:200px !important;
+}
+.inline-block{
+    display:inline-block !important;
 }
 /*.tab{
     padding:20px;
