--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Client/Views/main.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Client/Views/main.html
@@ -10,7 +10,7 @@
                             <form class="form-inline">
                                 <div class="form-group">
                                     <label for="defnitionId">Definitions</label><br>
-                                    <select required class="form-control" id="defnitionId" ng-options="obj.Title for obj in defnitions track by obj.BPDefinitionID" ng-model="filter.definitionID"></select>
+                                    <select required class="form-control max-width-md" id="defnitionId" ng-options="obj.Title for obj in defnitions track by obj.BPDefinitionID" ng-model="filter.definitionID"></select>
                                 </div>
                                 <div class="form-group">
                                     <label for="statusId">Status</label><br>
@@ -26,19 +26,17 @@
                                 <div class="form-group">
                                     <label class="control-label">Start date</label><br>
                                     <div class="form-group">
-                                        <input size="10" required class="form-control" ng-model="filter.FromDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
-                                    </div>
-                                    <div class="form-group">
-                                        <input size="8" required class="form-control" ng-model="filter.FromDate" data-autoclose="1" minutestep="1" placeholder="Time" bs-timepicker type="text">
+                                        <input size="10" required class="form-control max-width-sm inline-block" ng-model="filter.FromDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
+                                    
+                                        <input size="8" required class="form-control max-width-sm inline-block" ng-model="filter.FromDate" data-autoclose="1" minutestep="1" placeholder="Time" bs-timepicker type="text">
                                     </div>
                                 </div>
                                 <div class="form-group" >
                                     <label class="control-label">End date</label><br>
                                     <div class="form-group">
-                                        <input size="10" class="form-control" data-min-date="{{filter.FromDate}}" ng-model="filter.EndDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
-                                    </div>
-                                    <div class="form-group">
-                                        <input size="8" class="form-control" ng-model="filter.EndDate" data-autoclose="1" placeholder="Time" bs-timepicker type="text">
+                                        <input size="10" class="form-control max-width-sm inline-block" data-min-date="{{filter.FromDate}}" ng-model="filter.EndDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
+                                    
+                                        <input size="8" class="form-control max-width-sm inline-block" ng-model="filter.EndDate" data-autoclose="1" placeholder="Time" bs-timepicker type="text">
                                     </div>
 
                                 </div>
