--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Default.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Default.html
@@ -45,7 +45,37 @@
         <input type="checkbox" name="public">
         <label>Toggle</label>
     </div>
-
+    Select
+   
+    <div class="ui floating dropdown labeled search icon button">
+        <input type="text" />
+        <div>
+            <div ng-repeat="c in selectedCountries">{{c}}</div>
+        </div>
+        <div class="menu" tabindex="-1">
+            <div class="item" ng-click="selectLanguage('Arabic')">Arabic</div>
+            <div class="item" ng-click="selectLanguage('Chinese')">Chinese</div>
+            <div class="item" ng-click="selectLanguage('Danish')">Danish</div>
+            <div class="item">Dutch</div>
+            <div class="item">English</div>
+            <div class="item">French</div>
+            <div class="item">German</div>
+            <div class="item">Greek</div>
+            <div class="item">Hungarian</div>
+            <div class="item">Italian</div>
+            <div class="item">Japanese</div>
+            <div class="item">Korean</div>
+            <div class="item">Lithuanian</div>
+            <div class="item">Persian</div>
+            <div class="item">Polish</div>
+            <div class="item">Portuguese</div>
+            <div class="item">Russian</div>
+            <div class="item">Spanish</div>
+            <div class="item">Swedish</div>
+            <div class="item">Turkish</div>
+            <div class="item">Vietnamese</div>
+        </div>
+    </div>
 
     <div class="ui floating dropdown labeled search icon button">
         <i class="world icon"></i>
