--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html ng-app="appModule">
+<html ng-app="mainModule">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,11 +20,12 @@
 </head>
 <body ng-controller="mainCtrl">
     <a href="#/Default">Default</a> |
-    <a href="#/TestView">Test View</a>
-    <div ng-view ></div>
-    
-    
-  
+    <a href="#/TestView">Test View</a> | 
+    <a href="#/RouteRuleEditor">Route Rule Editor</a>
+    <div ng-view></div>
+
+
+
 </body>
 </html>
 
