--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -1,2 +1,3 @@
 ﻿<h1>Test View</h1>
-{{model}}
+<v-input type="Standard" placeholder="Username"></v-input>
+<v-input type="Icon" placeholder="Search .."></v-input>
