--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -1,3 +1,3 @@
 ﻿<h1>Test View</h1>
-<v-input type="Standard" placeholder="Username"></v-input>
-<v-input type="Icon" placeholder="Search .."></v-input>
+<v-textbox type="Standard" placeholder="Username"></v-textbox>
+<v-textbox type="Icon" placeholder="Search .." icon="search"></v-textbox>
