Add TextBox Type Search
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21201

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -1,3 +1,5 @@
 ﻿<h1>Test View</h1>
 <v-textbox type="Standard" placeholder="Username"></v-textbox>
 <v-textbox type="Icon" placeholder="Search .." icon="search"></v-textbox>
+<v-textbox type="search"></v-textbox>
+<v-textbox type="search" placeholder="Custom Place Holder"></v-textbox>
