--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -1,5 +1,8 @@
 ﻿<h1>Test View</h1>
-<v-textbox type="Standard" placeholder="Username"></v-textbox>
-<v-textbox type="Icon" placeholder="Search .." icon="search"></v-textbox>
-<v-textbox type="search"></v-textbox>
-<v-textbox type="search" placeholder="Custom Place Holder"></v-textbox>
+<v-textbox type="Standard" placeholder="Username" text="Input"></v-textbox>
+<v-textbox type="Icon" placeholder="Search .." icon="circular search" text="Input"></v-textbox>
+<v-textbox type="Icon" placeholder="Search .." icon="search" text="Input"></v-textbox>
+<v-textbox type="search" text="Input"></v-textbox>
+<v-textbox type="search" placeholder="Custom Place Holder" text="Input" ></v-textbox>
+
+{{Input}}
