--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/VTextboxIcon.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/VTextboxIcon.html
@@ -1,4 +1,4 @@
 ﻿<div class="ui icon input">
-    <input type="text" placeholder="{{holder}}">
+    <input type="text" placeholder="{{holder}}" ng-model="text">
     <i class="{{icon}} icon"></i>
 </div>
