--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/VTextboxStandard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/VTextboxStandard.html
@@ -1,3 +1,3 @@
 ﻿<div class="ui input">
-    <input type="text" placeholder="{{holder}}">
+    <input type="text" placeholder="{{holder}}" ng-model="text">
 </div>
