Refactoring TextBox Directive
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21208

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -4,5 +4,6 @@
 <v-textbox type="Icon" placeholder="Search .." icon="search" text="Input"></v-textbox>
 <v-textbox type="search" text="Input"></v-textbox>
 <v-textbox type="search" placeholder="Custom Place Holder" text="Input" ></v-textbox>
+<v-textbox type="mail" text="Input"></v-textbox>
 
 {{Input}}
